# finance-manager

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/core/: config.py
app/models/: user.py
app/scripts/: entrypoint.sh
